force-app/main/default/objects/Tag_Link__c/fields/Tag_Category__c.field-meta.xml
<CustomField>
    <fullName>Tag_Category__c</fullName>
    <formula>Tag__r.Category__c</formula>
    <label>Tag Category</label>
    <type>Text</type>
</CustomField>